[gd_scene load_steps=8 format=3 uid="uid://cm502ies2id2g"]

[ext_resource type="Script" path="res://scripts/win.gd" id="1_vdu3l"]
[ext_resource type="Texture2D" uid="uid://cuuhimtiw0tn4" path="res://assets/futureui1.png" id="2_556vs"]
[ext_resource type="VideoStream" path="res://cutscenes/end.ogv" id="2_dkd2h"]
[ext_resource type="Texture2D" uid="uid://bki7dd4jfrjbx" path="res://assets/outer_space.png" id="2_ghn5x"]
[ext_resource type="FontFile" uid="uid://3gj20nwrx5pw" path="res://fonts/CrayonLibre.ttf" id="3_srvhc"]
[ext_resource type="AudioStream" uid="uid://bnsl72tedse41" path="res://audio/sound effect/Menu Selection Click.wav" id="5_y4r17"]
[ext_resource type="AudioStream" uid="uid://cifgsgkkmi6ie" path="res://audio/music/The Fallen MP3.mp3" id="6_iffeh"]

[node name="Win" type="Node"]
script = ExtResource("1_vdu3l")

[node name="CutScene" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_dkd2h")
autoplay = true
expand = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_y4r17")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_iffeh")
volume_db = -5.0
autoplay = true

[node name="MainUI" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite2D" parent="MainUI"]
texture_filter = 1
position = Vector2(-52, 606)
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_ghn5x")

[node name="UI" type="NinePatchRect" parent="MainUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -97.0
offset_right = 394.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_556vs")
region_rect = Rect2(4.40021, 2.00018, 2682.87, 276)

[node name="Label" type="Label" parent="MainUI"]
texture_filter = 1
offset_left = 247.0
offset_top = 259.0
offset_right = 885.0
offset_bottom = 326.0
theme_override_fonts/font = ExtResource("3_srvhc")
theme_override_font_sizes/font_size = 26
text = "Mission completed: Father is founded! (Earth exploded though)"
autowrap_mode = 1

[node name="Home" type="Button" parent="MainUI"]
texture_filter = 1
offset_left = 845.0
offset_top = 351.0
offset_right = 969.0
offset_bottom = 394.0
theme_override_fonts/font = ExtResource("3_srvhc")
theme_override_font_sizes/font_size = 20
text = "Home"

[connection signal="finished" from="CutScene" to="." method="_on_cut_scene_finished"]
[connection signal="button_down" from="MainUI/Home" to="." method="_on_home_button_down"]
[connection signal="pressed" from="MainUI/Home" to="." method="_on_home_pressed"]
